...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jhf-WT-ftu">
                                <rect key="frame" x="130" y="605" width="115" height="42"/>
                                <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="F6o-vW-4xy"/>
                                </constraints>
                                <state key="normal" title="Launch Demo">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="ez2-7u-ZWi"/>
                                </connections>
                            </button>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Jy-QI-mqS">
                                <rect key="frame" x="145" y="136" width="90" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="90" id="a8m-ra-N82"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                <state key="normal" title="Load Data">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="refreshData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Y6H-qE-h7J"/>
                                </connections>
                            </button>
...
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xJv-qA-wV2">
                                <rect key="frame" x="323" y="263" width="36" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="FcA-YQ-kfv"/>
                                </constraints>
                                <state key="normal" title="Clear"/>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="r03-qc-qxo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="3VX-d0-wad"/>
                            <constraint firstItem="xL6-os-m1t" firstAttribute="top" secondItem="IBj-hA-ci6" secondAttribute="bottom" constant="24" id="6tN-dS-Oc8"/>
...
