...
        btnRefresh.layer.shadowOffset = CGSize(width: 5, height: 5)
        btnRefresh.layer.shadowRadius = 3.0
        btnRefresh.layer.shadowOpacity = 0.6
        btnRefresh.setTitleColor(UIColor.white, for: .normal)
        
        //Set initial value in lblNumPasses textField
        lblNumPasses?.text = "Display 5 records"
        
        //Set stepper control's min, max and increment values
        stepper.minimumValue = 1
        stepper.maximumValue = 100
        stepper.stepValue = 1
        stepper.value = 5
...
        headerView.layer.borderWidth = 1.0;

        //Add two labels Date-Time and Duration
        let dateLabel = UILabel(frame: CGRect(x: 16, y: 4, width: 120, height: 24))
        let durationLabel = UILabel(frame: CGRect(x: tableView.frame.maxX - 160, y: 4, width: 120, height: 24))
        
        dateLabel.text = "Date-Time"
        dateLabel.textColor = UIColor.white
        dateLabel.textAlignment = NSTextAlignment.center
        dateLabel.font = UIFont.systemFont(ofSize: 14, weight: UIFont.Weight.medium)
        
        durationLabel.text = "Duration"
        durationLabel.textColor = UIColor.white
...
